# trx-python

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  =0.29.24  =19.0  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  rationale.md  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  specifications.md  switcher.json
.github/workflows/: codeformat.yml  coverage.yml  docbuild.yml  publish-to-test-pypi.yml  python-package.yml  test.yml
.spin/: __init__.py  cmds.py
0.3/: index.html  py-modindex.html
0.3/_modules/trx/: fetcher.html  io.html  streamlines_ops.html  utils.html  workflows.html
0.3/_sources/autoapi/trx/: index.rst.txt
0.3/autoapi/trx/: index.html
0.3/autoapi/trx/fetcher/: index.html
0.3/autoapi/trx/io/: index.html
0.3/autoapi/trx/trx_file_memmap/: index.html
0.3/autoapi/trx/utils/: index.html
0.3/autoapi/trx/viz/: index.html
0.3/docs/_build/doctrees/: contributing.doctree  dev.doctree  environment.pickle  index.doctree  scripts.doctree  sg_execution_times.doctree  trx_specifications.doctree
0.3/docs/_build/html/: .buildinfo  contributing.html  dev.html  genindex.html  index.html  objects.inv  py-modindex.html  scripts.html  search.html  searchindex.js  sg_execution_times.html  trx_specifications.html
0.3/docs/source/auto_examples/: index.rst  plot_dps_dpv.codeobj.json  plot_dps_dpv.ipynb  plot_dps_dpv.py.md5  plot_groups.codeobj.json  plot_groups.ipynb  plot_groups.py  plot_groups.py.md5  plot_groups.rst  plot_read_write_trx.codeobj.json  plot_read_write_trx.ipynb  plot_read_write_trx.py  plot_read_write_trx.py.md5  searchindex.db  sg_execution_times.rst
_modules/: index.html
_modules/trx/: fetcher.html  io.html  streamlines_ops.html  trx_file_memmap.html  utils.html  viz.html  workflows.html
_sources/autoapi/trx/: index.rst.txt
_sources/autoapi/trx/fetcher/: index.rst.txt
_sources/autoapi/trx/io/: index.rst.txt
_sources/autoapi/trx/streamlines_ops/: index.rst.txt
_sources/autoapi/trx/trx_file_memmap/: index.rst.txt
_sources/autoapi/trx/utils/: index.rst.txt
_sources/autoapi/trx/viz/: index.rst.txt
_sources/autoapi/trx/workflows/: index.rst.txt
autoapi/: index.html
autoapi/trx/: index.html
autoapi/trx/fetcher/: index.html
autoapi/trx/io/: index.html
autoapi/trx/streamlines_ops/: index.html
autoapi/trx/trx_file_memmap/: index.html
autoapi/trx/utils/: index.html
autoapi/trx/viz/: index.html
autoapi/trx/workflows/: index.html
cpp/src/: trx.cpp  trx.tpp
cpp/tests/: test_trx_mmap.cpp
dev/: contributing.html  dev.html  genindex.html  index.html  objects.inv  py-modindex.html  scripts.html  search.html  searchindex.js  sg_execution_times.html  trx_specifications.html
dev/_downloads/8949d0a4562bd0eba677e15ce697c59b/: plot_read_write_trx.ipynb
dev/_downloads/d6077c281058dc90f37cc05a618276cc/: plot_groups.ipynb
dev/_downloads/fdddbeb1950b6f4102bd65b54773f570/: plot_dps_dpv.ipynb
dev/_modules/: index.html  trx.html
dev/_modules/trx/: cli.html  fetcher.html  io.html  streamlines_ops.html  trx_file_memmap.html  utils.html  viz.html  workflows.html
dev/_sources/: index.rst.txt  sg_execution_times.rst.txt
dev/_sources/auto_examples/: plot_dps_dpv.rst.txt  plot_groups.rst.txt  plot_read_write_trx.rst.txt  sg_execution_times.rst.txt
dev/_sources/autoapi/trx/: index.rst.txt
dev/_static/: documentation_options.js  switcher.json
dev/auto_examples/: index.html  plot_dps_dpv.html  plot_groups.html  plot_read_write_trx.html  sg_execution_times.html
dev/autoapi/: index.html
dev/autoapi/trx/: index.html
dev/autoapi/trx/cli/: index.html
dev/autoapi/trx/fetcher/: index.html
dev/autoapi/trx/io/: index.html
dev/autoapi/trx/streamlines_ops/: index.html
dev/autoapi/trx/trx_file_memmap/: index.html
dev/autoapi/trx/utils/: index.html
dev/autoapi/trx/viz/: index.html
dev/autoapi/trx/workflows/: index.html
docs/source/: conf.py  dev.rst  index.rst  scripts.rst  trx_specifications.rst
examples/: README.txt  plot_dps_dpv.py  plot_read_write_trx.py
file_format_utils/: __init__.py
scripts/: tff_concatenate_tractograms.py  tff_convert_dsi_studio.py  tff_convert_tractogram.py  tff_generate_trx_from_scratch.py  tff_manipulate_datatype.py  tff_simple_compare.py  tff_validate_trx.py  tff_verify_header_compatibility.py  tff_visualize_overlap.py
scripts/tests/: test_workflows.py
stable/: index.html  py-modindex.html  scripts.html  search.html  searchindex.js  sg_execution_times.html
stable/_downloads/0bcc76c0a12205e59da5b5d03cf4d3c6/: plot_groups.py
stable/_modules/trx/: fetcher.html  io.html  streamlines_ops.html  trx_file_memmap.html  utils.html  viz.html
stable/_sources/auto_examples/: plot_groups.rst.txt  plot_read_write_trx.rst.txt  sg_execution_times.rst.txt
stable/_sources/autoapi/trx/: index.rst.txt
stable/auto_examples/: plot_read_write_trx.html
stable/autoapi/: index.html
stable/autoapi/trx/cli/: index.html
stable/autoapi/trx/fetcher/: index.html
stable/autoapi/trx/io/: index.html
stable/autoapi/trx/streamlines_ops/: index.html
stable/autoapi/trx/trx_file_memmap/: index.html
stable/autoapi/trx/utils/: index.html
stable/autoapi/trx/viz/: index.html
tools/: update_switcher.py
tractography_file_format/: __init__.py  trk_emmanuel.py  utils.py  viz.py  workflows.py
trx/: __init__.py  cli.py  fetcher.py  io.py  streamlines_ops.py  trx_file_memmap.py  utils.py  viz.py  workflows.py
trx/tests/: test_cli.py  test_io.py  test_memmap.py  test_streamlines_ops.py
trx/tests/data/: small.trx  small_compressed.trx
trx_file/: __init__.py  trx_file.py
trx_file_manual/: __init__.py  trx_file_manual.py
trx_file_memmap/: README.md  __init__.py  specifications.md  trx_file_memmap.py
trx_file_memmap/cpp/: .gitignore  CMakeLists.txt
trx_file_memmap/cpp/src/: trx.cpp  trx.h  trx.tpp
trx_file_memmap/cpp/tests/: CMakeLists.txt  test_trx_mmap.cpp
trx_file_memmap/tests/: test_memmap.py
trx_file_memmap/tests/data/: small.trx  small_compressed.trx
trx_file_zarr/: __init__.py  trx_file_zarr.py
(+82 files in other folders)
