[build-system]
requires = ["setuptools >= 64", "wheel", "setuptools_scm[toml] >= 7"]
build-backend = "setuptools.build_meta"

[project]
name = "trx-python"
dynamic = ["version"]
description = "Experiments with new file format for tractography"
readme = "README.md"
license = {text = "BSD License"}
requires-python = ">=3.9"
authors = [
    {name = "The TRX developers"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "deepdiff",
    "nibabel >= 5",
    "numpy >= 1.22",
]

[project.optional-dependencies]
dev = [
    "spin >= 0.13",
    "setuptools_scm",
]
doc = [
    "astroid >= 4.0.0",
    "sphinx >= 9.0.0",
    "pydata-sphinx-theme >= 0.16.1",
    "sphinx-autoapi >= 3.0.0",
    "numpydoc",
]
test = [
    "flake8",
    "psutil",
    "pytest >= 7",
    "pytest-console-scripts >= 0",
]
all = [
    "trx-python[dev]",
    "trx-python[doc]",
    "trx-python[test]",
]

[project.urls]
Homepage = "https://github.com/tee-ar-ex/trx-python"
Documentation = "https://tee-ar-ex.github.io/trx-python/"
Repository = "https://github.com/tee-ar-ex/trx-python"

[tool.setuptools]
packages = ["trx"]
include-package-data = true
script-files = [
    "scripts/tff_concatenate_tractograms.py",
    "scripts/tff_convert_dsi_studio.py",
    "scripts/tff_convert_tractogram.py",
    "scripts/tff_generate_trx_from_scratch.py",
    "scripts/tff_manipulate_datatype.py",
    "scripts/tff_simple_compare.py",
    "scripts/tff_validate_trx.py",
    "scripts/tff_verify_header_compatibility.py",
    "scripts/tff_visualize_overlap.py",
]

[tool.setuptools.dynamic]
version = {attr = "trx._version.__version__"}

[tool.setuptools_scm]
write_to = "trx/_version.py"
write_to_template = """\
\"\"\"Version file, automatically generated by setuptools_scm.\"\"\"
__version__ = "{version}"
"""
fallback_version = "0.0"
local_scheme = "no-local-version"

[tool.spin]
package = "trx"

[tool.spin.commands]
"Setup" = [".spin/cmds.py:setup"]
"Build" = ["spin.cmds.pip.install"]
"Test" = [".spin/cmds.py:test", ".spin/cmds.py:lint"]
"Docs" = [".spin/cmds.py:docs"]
"Clean" = [".spin/cmds.py:clean"]
