[metadata]
name = trx
url = https://github.com/tee-ar-ex/trx-python
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = Experiments with new file format for tractography
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

packages = find:
include_package_data = True


[options]
python_requires = >=3.7
setup_requires = packaging >=19.0
install_requires = nibabel >= 3.*
test_requires =
      pytest>=7.*
      pytest-console-scripts>=0.*
      fury@git+https://github.com/frheault/fury.git@5059a529#egg=fury
      dipy@git+https://github.com/frheault/dipy.git@4e192c5c6#egg=dipy

[options.extras_require]
doc = sphinx
      pydata-sphinx-theme
      sphinx-autoapi
      numpydoc
