[metadata]
name = trx-python
url = https://github.com/tee-ar-ex/trx-python
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = Experiments with new file format for tractography
long_description = file: README.md
long_description_content_type = text/markdown
platforms = OS Independent

packages = find:
include_package_data = True


[options]
python_requires = >=3.8
setup_requires =
    packaging >= 19.0
    cython >= 0.29
install_requires =
    setuptools_scm
    deepdiff
    nibabel >= 5
    numpy >= 1.22

[options.extras_require]
doc = astroid==2.15.8
    sphinx
    pydata-sphinx-theme
    sphinx-autoapi
    numpydoc

test =
    flake8
    psutil
    pytest >= 7
    pytest-console-scripts >= 0

all =
    %(doc)s
    %(test)s
